# Lumaris

./: .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: BACKDROP.md  BUILD.md  CONFIG.md  DDC.md  DEPENDENCIES.md  HOTKEYS_AUTOSTART.md  PERFORMANCE.md  RELEASE.md  TEST.md  VERIFICATION.md
docs/release-notes/: TEMPLATE.md  v1.0.2.md
installer/: Lumaris.iss
scripts/: package-portable.ps1  package-portable.sh
src/: app.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  commands.rs  error.rs  events.rs  lib.rs  main.rs  state.rs  update.rs
src-tauri/src/hotkey/: manager.rs  mod.rs  model.rs
src-tauri/src/i18n/: mod.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/monitor/: ddc.rs  device.rs  identity.rs  manager.rs  mod.rs  worker.rs
src-tauri/src/platform/: mod.rs  stub.rs  windows.rs  wmi_backlight.rs
src-tauri/src/settings/: migration.rs  mod.rs  model.rs  storage.rs
src-tauri/src/startup/: manager.rs  mod.rs
src-tauri/src/tray/: menu.rs  mod.rs  wheel.rs  wheel_stub.rs
src-tauri/src/utils/: mod.rs  target.rs
src-tauri/src/window/: backdrop.rs  mod.rs  positioning.rs  system_messages.rs
src/i18n/: index.ts
src/i18n/locales/: en.ts  zh-CN.ts
src/ipc/: commands.ts  events.ts
src/state/: store.ts  types.ts
src/styles/: acrylic.css  controls.css  flyout.css  reset.css  settings.css  tokens.css
src/ui/: brightness-slider.ts  flyout.ts  hotkey-recorder.ts  icons.ts  monitor-list.ts  select.ts  settings.ts  toast.ts
src/utils/: formatting.ts  throttle.ts
